# raylib-calc

./: CMakeLists.txt  main.c  run.sh
.github/workflows/: cmake-multi-platform.yml
